syntax = "proto3";

option csharp_namespace = "Monotaur.Plugins.Dummy";

package probe;

// The greeting service definition.
service Probe {
  // Sends a greeting
  rpc ProbeResult (ProbeResultRequest) returns (ProbeResultResponse);
}

// The request message containing the user's name.
message ProbeResultRequest {
  string id = 1;
  string result = 2;
}

// The response message containing the greetings.
message ProbeResultResponse {
  string message = 1;
}